--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -23,7 +23,7 @@
 		</servlet-class>
 		<init-param>
 			<param-name>javax.ws.rs.Application</param-name>
-			<param-value>com.cisco.webex.rest.RestJaxRsApplication</param-value>
+			<param-value>com.ciswbx.rest.RestJaxRsApplication</param-value>
 		</init-param>		
 		<load-on-startup>1</load-on-startup>
 	</servlet>
